fix: update body text color and adjust section class spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,8 +21,9 @@
 
 body {
   background: whitesmoke;
-  color: var(--foreground);
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 
